# mrtrix-rish-

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
docker/: Dockerfile  Singularity.def
docs/: ROADMAP.md
docs/design/: DESIGN.md  FLOWCHART.md
docs/tutorials/04_quality_control/: site_effect_testing.md
examples/ds003416/: .gitignore  CHANGES  README  dataset_description.json  manifest_glm.csv  participants.tsv  ref_participants.tsv  run_site_effect_test.sh  test_covariates.sh
examples/ds005664/: manifest_glm.csv  participants.tsv  run_harmonization_test.sh
scripts/: README.md  generate_qc.sh  rish_config.conf  rish_pipeline.sh  sublist.txt  test_harmonize.sh  test_pipeline.sh
src/: __init__.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  bids_workflow.py  covariates.py  fod.py  harmonize.py  rish_glm.py  scale_maps.py  template.py
src/io/: __init__.py  bids_io.py  config_io.py
src/qc/: __init__.py  glm.py  metrics.py  reports.py
tests/: __init__.py
tests/unit/: test_config.py  test_covariates.py  test_fod.py  test_glm.py  test_rish_features.py  test_rish_glm.py  test_site_effects.py
